<?xml version="1.0"?>
<package format="2">
  <name>odrive_ros_control</name>
  <version>0.0.0</version>
  <description>The odrive_ros_control package</description>
  <maintainer email="joejsy@gmail.com">naktamello</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>cmake_modules</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>joint_limits_interface</build_export_depend>
  <build_export_depend>realtime_tools</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_limits_interface</exec_depend>
  <exec_depend>realtime_tools</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>control_toolbox</depend>
  <depend>transmission_interface</depend>
  <depend>pluginlib</depend>
  <depend>urdf</depend>
  <depend>angles</depend>
  <depend>gazebo_ros_control</depend>
  <depend>industrial_robot_client</depend>
  <export>
    <gazebo_ros_control plugin="${prefix}/odrive_hardware_sim_plugin.xml"/>
    <odrive_ros_control plugin="${prefix}/odrive_transport_plugin.xml"/>
  </export>
</package>
