<?xml version="1.0"?>
<package format="2">
  <name>async_comm</name>
  <version>0.0.0</version>
  <description>The async_comm package</description>
  <maintainer email="joejsy@gmail.com">naktamello</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_export_depend>boost</build_export_depend>
  <export>
  </export>
</package>
