<?xml version="1.0"?>
<package format="2">
  <name>odrive_ros_control_meta</name>
  <version>0.0.1</version>
  <description>Meta package for odrive_ros_control related packages</description>
  <maintainer email="joejsy@gmail.com">naktamello</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>odrive_ros_control</exec_depend>
  <export>
    <metapackage/>
    <!-- <architecture_independent/> -->
  </export>
</package>
